syntax = "proto3";

option csharp_namespace = "Parkla.Protobuf";

package collector;

import "google/protobuf/any.proto";
import "google/protobuf/Empty.proto";
import "google/protobuf/timestamp.proto";

service Collector {
    rpc Receive(Data) returns (google.protobuf.Empty);
}

message Data {
    string Group = 1;
    repeated google.protobuf.Any dataList = 2;
}

message ParkSpaceStatus {
    string Parkid = 1;
    string Spaceid = 2;
    int32 Status = 3;
    google.protobuf.Timestamp DateTime = 4;
}